# prompt_injection_fuzzing_third

./: .gitignore  Coverage_및_검증_가이드.md  README.md  Scoring_및_리포트_해설.md  codex4차.md  codex5.3_업그레이드_프롬프트.md  pyproject.toml  스키마_레퍼런스.md  최종프롬프트인젝션 유형.md  카탈로그_작성_가이드.md  프롬프트_인젝션_데이터셋_설계.md  프롬프트_인젝션_퍼저_결과_종합_보고서.md  프롬프트_인젝션_퍼저_설계_설명.md  프롬프트_인젝션_퍼저_아키텍처.md
.tmp/: run_gateway_probe_local.py  run_prompt_guard_local.py
catalogs/: analysis_taxonomy.yaml  attack_families.yaml  carriers.yaml  coverage_matrix.yaml  entry_points.yaml  ko_axis_expansion_notes.md  mutation_recipes.yaml  qa_policy.yaml  sample_cases.jsonl  sample_templates.jsonl  scenario_families.yaml  source_truth_manifest.yaml  taxonomy.yaml
configs/: build_dev.yaml  build_generated_dev.yaml  build_release_heldout.yaml  generator_bulk.yaml  generator_mvp.yaml  run_matrix.yaml
prompt_injection_fuzzing/: PLAN.md  read_docx.py
prompt_injection_fuzzing/test3/: README.md  fuzzer_config.json  prompt_injection_fuzzer_plan.md  pyproject.toml
prompt_injection_fuzzing/test3/data/suites/: base_seed.jsonl
prompt_injection_fuzzing/test3/fuzzer/: __init__.py  adapters.py  builder.py  cli.py  io_utils.py  metrics.py  models.py  mutators.py  oracles.py  packers.py  runner.py  sample_data.py  schema.py
prompt_injection_fuzzing_third_test/: PLAN.md  requirements.txt
src/pi_fuzzer/: __init__.py  (+23 more)
tests/: test_analysis_extensions.py  test_build_coverage_profiles.py  test_catalog_stage_consistency.py  test_cli_score.py  test_engine_target_config.py  test_gateway_probe_runtime.py  test_generator.py  test_generator_bulk.py  test_generator_bulk_report.py  test_generator_catalog_expansion.py  test_guardrail_adapters.py  test_prompt_guard_runtime.py  test_runners_error_handling.py  test_runtime_render.py  test_scoring.py  test_validation.py
문서/: 문서_분류_가이드.md
(+84 files in other folders)
