[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-fuzzer"
version = "0.1.0"
description = "Prompt injection benchmark builder, runner, scorer, and reporter"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7.0",
  "typer>=0.12.0",
  "pyyaml>=6.0.1",
  "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]
guardrail = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "transformers>=4.45.0",
  "torch>=2.4.0",
  "huggingface_hub>=0.24.0",
  "litellm[proxy]>=1.60.0"
]

[project.scripts]
pifuzz = "pi_fuzzer.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
